# StudyRoom-Platform

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  initial_data.py  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  login.py  rooms.py  study_material.py  users.py
app/core/: base.py  config.py  db.py  security.py
app/models/: __init__.py  room.py  study_material.py  study_room.py  user.py
app/schemas/: room.py  study_material.py  token.py  user.py
migrations/: env.py
migrations/versions/: 130c13472c16_add_missing_study_rooms.py  134167a9059f_add_missing_studyroom_created_by.py  2eba57c88242_add_materials_report_model.py  526868f6590e_update_id_fields_to_uuid_field.py  5829c8c8134f_add_materials_model.py  591c481fb72d_change_field_type_user.py  667e3aa87991_add_last_login.py  7a14f44cb12f_add_indexes.py  97ae8acf875f_add_study_rooms.py  9fe7b9a557c2_create_user_table.py  a3631c7ffd26_fix_timestamp_issues.py  b8a5f3d2e065_fix_timestamp_issues.py  e52f1549c9c2_add_superuser_to_user_model.py  e7c29dc43614_fix_delete_issue_add_cascade.py  ec6ad0007657_fix_timestamp_issues.py  f5fdfa051eb7_add_missing_study_rooms.py
