[project]
name = "studyroom-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "psycopg[binary]>=3.3.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "psycopg2>=2.9.11",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
]
